Fix CW field being too small in certain situations

--- a/app/javascript/flavours/aether/styles/components/single_column.scss
+++ b/app/javascript/flavours/aether/styles/components/single_column.scss
@@ -355,6 +355,23 @@
       display: inline !important;
     }
   }
+
+  .compose-form__bottom-buttons {
+    &.spoiler-button--clicked {
+      flex-flow: row wrap;
+    }
+
+    .spoiler_wrapper {
+      .spoiler-input {
+        padding-bottom: 0;
+
+        &.spoiler-input--visible {
+          flex: 1 100%;
+          padding-bottom: 12px;
+        }
+      }
+    }
+  }
 }
 
 .explore__search-header {
